--- a/examples/hybrid_elastic_cluster.yaml
+++ b/examples/hybrid_elastic_cluster.yaml
@@ -127,12 +127,12 @@ topology_template:
         properties: { sla_id: 5cf12da6cb0e8f527dfb3c97 }
         targets: [ lrms_wn ]
 
-    - deploy_on_recas:
-        type: tosca.policies.Placement
-        properties: { sla_id: 5bfbc091a9a88f528bf5114b }
-        targets: [ lrms_server ]
+#    - deploy_on_recas:
+#        type: tosca.policies.Placement
+#        properties: { sla_id: 5bfbc091a9a88f528bf5114b }
+#        targets: [ lrms_server ]
 
-    - deploy_on_psnc:
-        type: tosca.policies.Placement
-        properties: { sla_id: 5cefdd1bcb0e8f527dfb3c94 }
-        targets: [ ]
+#    - deploy_on_psnc:
+#        type: tosca.policies.Placement
+#        properties: { sla_id: 5cefdd1bcb0e8f527dfb3c94 }
+#        targets: [ ]
