--- a/examples/hybrid_elastic_cluster.yaml
+++ b/examples/hybrid_elastic_cluster.yaml
@@ -75,6 +75,10 @@ topology_template:
           properties:
             dns_name: slurmserver
             network_name: PUBLIC
+            ports:
+              openvpn:
+                protocol: udp
+                source: 1194
         host:
           properties:
             num_cpus: { get_input: fe_cpus }
@@ -131,8 +135,3 @@ topology_template:
 #        type: tosca.policies.Placement
 #        properties: { sla_id: 5bfbc091a9a88f528bf5114b }
 #        targets: [ lrms_server ]
-
-#    - deploy_on_psnc:
-#        type: tosca.policies.Placement
-#        properties: { sla_id: 5cefdd1bcb0e8f527dfb3c94 }
-#        targets: [ ]
