--- a/artifacts/lrms/slurm/slurm_wn_install.yml
+++ b/artifacts/lrms/slurm/slurm_wn_install.yml
@@ -12,7 +12,7 @@
   - role: indigo-dc.indigovr
     INDIGOVR_NODE_TYPE: standalone
     INDIGOVR_CENTRALPOINT_IP: '{{ slurm_public_front_end_ip }}'
-    when: fe_hybrid_cluster
+    when: wn_hybrid_cluster
   - role: indigo-dc.nfs
     nfs_mode: 'client'
     nfs_client_imports: [{ local: "/home", remote: "/home", server_host: "10.8.0.1" }]
