--- a/custom_types.yaml
+++ b/custom_types.yaml
@@ -1041,7 +1041,7 @@ node_types:
         file: indigo-dc.nfs,master
         type: tosca.artifacts.AnsibleGalaxy.role
       openvpn_role:
-        file: indigo-dc.indigovr,dev-micafer
+        file: indigo-dc.indigovr,master
         type: tosca.artifacts.AnsibleGalaxy.role
     capabilities:
         lrms:
