--- a/artifacts/lrms/slurm/slurm_wn_install.yml
+++ b/artifacts/lrms/slurm/slurm_wn_install.yml
@@ -19,7 +19,7 @@
         regexp: ".*{{ansible_hostname}}.localdomain.*$"
         line: "{{ansible_tun0.ipv4.address}} {{ansible_hostname}}.localdomain {{ansible_hostname}}"
       delegate_facts: True
-      delegate_to: '{{ front_end_ip }}'
+      delegate_to: '{{ slurm_front_end_ip }}'
 
     - name: Add Master VPN IP in host
       lineinfile:
