--- a/artifacts/lrms/kubernetes/kube_fe_install.yml
+++ b/artifacts/lrms/kubernetes/kube_fe_install.yml
@@ -38,7 +38,18 @@
     include_role:
       name: indigo-dc.kubernetes
     vars:
+      kube_server: '192.168.255.1'
+      kube_api_server: '192.168.255.1'
+      kube_apiserver_options: [{option: "--service-node-port-range", value: "8000-35000"}, {option: "--insecure-port", value: "8080"}, {option: "--token-auth-file", value: "/etc/kubernetes/pki/auth"}]
+      kube_deploy_dashboard: true
+    when: fe_hybrid_cluster
+
+  - name: Call Kubernetes role as front
+    include_role:
+      name: indigo-dc.kubernetes
+    vars:
       kube_server: '{{ kube_front_end_ip }}'
       kube_api_server: '{{ kube_front_end_ip }}'
       kube_apiserver_options: [{option: "--service-node-port-range", value: "8000-35000"}, {option: "--insecure-port", value: "8080"}, {option: "--token-auth-file", value: "/etc/kubernetes/pki/auth"}]
       kube_deploy_dashboard: true
+    when: not fe_hybrid_cluster
