--- a/artifacts/lrms/kubernetes/kube_wn_install.yml
+++ b/artifacts/lrms/kubernetes/kube_wn_install.yml
@@ -1,7 +1,7 @@
 ---
 - hosts: localhost
   connection: local
-  roles:
+  tasks:
   - block:
     - name: Call IndigoVR role as standalone
       include_role:
