--- a/examples/hybrid_mesos_elastic_cluster.yaml
+++ b/examples/hybrid_mesos_elastic_cluster.yaml
@@ -213,9 +213,9 @@ topology_template:
     - deploy_on_ifca:
         type: tosca.policies.Placement
         properties: { sla_id: 5cf12da6cb0e8f527dfb3c97 }
-        targets: [ lrms_wn ]
+        targets: [ mesos_slave_server ]
 
 #    - deploy_on_recas:
 #        type: tosca.policies.Placement
 #        properties: { sla_id: 5bfbc091a9a88f528bf5114b }
-#        targets: [ lrms_server ]
+#        targets: [ mesos_slave_server ]
